<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<groupId>com.dokdae.test</groupId>
	<artifactId>concurrent</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	
	<properties>
		<webapp.context>/</webapp.context>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		
		<!-- Test -->
		<junit.version>4.11</junit.version>
		<hamcrest.version>1.3</hamcrest.version>
		<mockito.version>1.9.5</mockito.version>
		<camel.test.version>2.13.2</camel.test.version>

		<!-- Logging -->
		<logback.version>1.1.2</logback.version>
		<slf4j.version>1.7.7</slf4j.version>
		
		<!-- Maven -->
		<maven.test.skip>false</maven.test.skip>
		<maven.compiler.source>1.7</maven.compiler.source>
		<maven.compiler.target>1.7</maven.compiler.target>
		<maven.compiler.encoding>UTF-8</maven.compiler.encoding>
		<maven.resource.encoding>UTF-8</maven.resource.encoding>
	</properties>

	<dependencies>
		<!-- TEST -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-library</artifactId>
			<version>${hamcrest.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>${mockito.version}</version>
			<scope>test</scope>
		</dependency>
		<!-- Logging -->
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>${logback.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>
			<!-- Utils - Getter/Setter auto create annotation -->
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>1.14.4</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
	  			<artifactId>commons-lang3</artifactId>
	  			<version>3.1</version>
			</dependency>
			<dependency>
				<groupId>commons-codec</groupId>
				<artifactId>commons-codec</artifactId>
				<version>1.6</version>
			</dependency>
			<dependency>
				<groupId>commons-collections</groupId>
				<artifactId>commons-collections</artifactId>
				<version>3.2.1</version>
			</dependency>
			<dependency>
				<groupId>commons-pool</groupId>
				<artifactId>commons-pool</artifactId>
				<version>1.6</version>
			</dependency>
			<!-- thread-safe simpledateformat -->
			<dependency>
			  <groupId>com.cedarsoftware</groupId>
			  <artifactId>java-util</artifactId>
			  <version>1.8.0</version>
			</dependency>
			
			<!-- GeoJson -->
			<dependency>
				<groupId>de.grundid.opendatalab</groupId>
				<artifactId>geojson-jackson</artifactId>
				<version>1.1</version>
			</dependency>

			<!-- Caching -->
			<dependency>
				<groupId>net.sf.ehcache</groupId>
				<artifactId>ehcache-core</artifactId>
				<version>${ehcache.version}</version>
				<exclusions>
					<exclusion>
						<groupId>commons-logging</groupId>
						<artifactId>commons-logging</artifactId>
					</exclusion>
				</exclusions>
			</dependency>

			<!-- AOP -->
			<dependency>
				<groupId>org.aspectj</groupId>
				<artifactId>aspectjrt</artifactId>
				<version>${aspectj.version}</version>
			</dependency>
			<dependency>
				<groupId>org.aspectj</groupId>
				<artifactId>aspectjweaver</artifactId>
				<version>${aspectj.version}</version>
				<scope>runtime</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<!-- 빌드 설정 -->
	<build>
		<!-- build structure 정의 -->
		<defaultGoal>install</defaultGoal>
		<sourceDirectory>src/main/java</sourceDirectory>
		<testSourceDirectory>src/test/java</testSourceDirectory>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
			<resource>
				<directory>src/main/resources-${environment}</directory>
			</resource>
		</resources>
		<testResources>
			<testResource>
				<directory>src/test/resources</directory>
			</testResource>
		</testResources>

		<!-- 플러그인 관리 -->
		<pluginManagement>
			<plugins>
				<!-- maven 컴파일러 -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.0</version>
					<configuration>
						<!-- 경고에 대한 구체적인 오류 표시 -->
						<compilerArguments>
							<Xlint />
						</compilerArguments>
						<verbose>true</verbose>
						<source>${maven.compiler.source}</source>
						<target>${maven.compiler.target}</target>
						<encoding>${maven.compiler.encoding}</encoding>
						<showWarnings>true</showWarnings>
					</configuration>
				</plugin>
				<!-- reporting -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-site-plugin</artifactId>
					<version>3.3</version>
					<configuration>
						<reportPlugins>
							<plugin>
								<groupId>org.codehaus.mojo</groupId>
								<artifactId>findbugs-maven-plugin</artifactId>
							</plugin>
						</reportPlugins>
					</configuration>
				</plugin>
				<!-- Test -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.13</version>
					<configuration>
						<includes>
							<include>**/*Tests.java</include>
						</includes>
					</configuration>
				</plugin>

				<!-- eclipse plugin -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-eclipse-plugin</artifactId>
					<version>2.9</version>
					<configuration>
						<downloadSources>true</downloadSources>
						<downloadJavadocs>true</downloadJavadocs>
						<wtpversion>2.0</wtpversion>
						<sourceIncludes>
							<sourceInclude>**/*.*</sourceInclude>
						</sourceIncludes>
						<additionalBuildcommands>
							<buildCommand>
								<name>org.springframework.ide.eclipse.core.springbuilder</name>
							</buildCommand>
							<buildCommand>
								<name>org.eclipse.m2e.core.maven2Builder</name>
							</buildCommand>
						</additionalBuildcommands>
						<additionalProjectnatures>
							<projectnature>org.eclipse.jdt.core.javanature</projectnature>
							<projectnature>org.springframework.ide.eclipse.core.springnature</projectnature>
							<projectnature>org.eclipse.m2e.core.maven2Nature</projectnature>
						</additionalProjectnatures>
					</configuration>
				</plugin>
				<!-- jar-with-dependencies -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>2.4</version>
					<configuration>
						<descriptorRefs>
							<descriptorRef>jar-with-dependencies</descriptorRef>
						</descriptorRefs>
					</configuration>
				</plugin>
				<!--This plugin's configuration is used to store Eclipse m2e settings 
					only. It has no influence on the Maven build itself. -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											com.google.protobuf.tools
										</groupId>
										<artifactId>
											maven-protoc-plugin
										</artifactId>
										<versionRange>
											[0.1.10,)
										</versionRange>
										<goals>
											<goal>compile</goal>
											<goal>testCompile</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>


	</build>

	<!-- 프로파일 -->
	<profiles>
		<!-- Defines the development deployment information -->
		<profile>
			<id>local</id>
			<activation>
				<activeByDefault>true</activeByDefault>
				<!-- 아래는 이 프로파일이 활성화된느 AND 조건으로, 이조건들을 만족하면 활성화가 된다. -->
				<!-- Window XP 조건에 만족하고 메이븐 버전이 2.0.5이고 파일이 file2.properties가 존재하고 file1.properties가 
					없는 경우 활성화 -->
				<!-- <jdk>1.6</jdk> <os> <name>Windows XP</name> <family>Windows</family> 
					<arch>x86</arch> <version>5.1.2600</version> </os> <property> <name>mavenVersion</name> 
					<value>2.0.5</value> </property> <file> <exists>file2.properties</exists> 
					<missing>file1.properties</missing> </file> -->
			</activation>
			<properties>
				<environment>local</environment>
				<protoc.path>/usr/local/bin</protoc.path>
				<!-- CI 툴을 위한 정보 .. <deploymentManagerRestHost>10.50.50.52</deploymentManagerRestHost> 
					<deploymentManagerRestPort>58090</deploymentManagerRestPort> <deploymentManagerRestUsername>myusername</deploymentManagerRestUsername> 
					<deploymentManagerRestPassword>mypassword</deploymentManagerRestPassword> -->
			</properties>

		</profile>
		<!-- Defines the development deployment information -->
		<profile>
			<id>develop</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<properties>
				<environment>develop</environment>
				<protoc.path>/app/jenkins/utils/bin</protoc.path>
			</properties>

		</profile>
		<!-- Defines the staging deployment information -->
		<profile>
			<id>staging</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<properties>
				<environment>staging</environment>
				<protoc.path>/app/jenkins/utils/bin</protoc.path>
			</properties>
		</profile>
		<!-- Defines the product deployment information -->
		<profile>
			<id>product</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<properties>
				<environment>product</environment>
				<protoc.path>/app/jenkins/utils/bin</protoc.path>
			</properties>
		</profile>
	</profiles>

	<!-- 리포팅 플러그인 -->
	<reporting>
		<plugins>
			<!-- jxr:jxr -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jxr-plugin</artifactId>
				<version>2.3</version>
			</plugin>
			<!-- pmd -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>2.6</version>
				<configuration>
					<rulesets>
						<ruleset>/rulesets/braces.xml</ruleset>
						<ruleset>/rulesets/naming.xml</ruleset>
						<ruleset>/rulesets/basic.xml</ruleset>
						<ruleset>/rulesets/coupling.xml</ruleset>
					</rulesets>
					<outputEncoding>UTF-8</outputEncoding>
				</configuration>
			</plugin>
			<!-- findbug -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>findbugs-maven-plugin</artifactId>
				<version>2.3.3</version>
				<configuration>
					<findbugsXmlOutput>true</findbugsXmlOutput>
					<xmlOutput>true</xmlOutput>
				</configuration>
			</plugin>
			<!-- surefire -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.10</version>
				<inherited>true</inherited>
				<configuration>
					<forkMode>always</forkMode>
					<reportFormat>xml</reportFormat>
					<argLine>-Xms256m -Xmx512m -XX:MaxPermSize=128m
						-Dfile.encoding=UTF-8</argLine>
				</configuration>
			</plugin>
		</plugins>
	</reporting>
	<modules>
		<module>concurrent-example</module>
	</modules>
</project>